--- a/src/Resources/Game.fxml
+++ b/src/Resources/Game.fxml
@@ -1,19 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.effect.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<Pane cache="true" cacheHint="QUALITY" depthTest="ENABLE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" stylesheets="@../CSS/Game.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.GameController">
+<Pane cache="true" cacheHint="QUALITY" depthTest="ENABLE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" stylesheets="@../CSS/Game.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.GameController">
    <VBox alignment="TOP_CENTER" prefHeight="800.0" prefWidth="800.0">
       <HBox alignment="CENTER_LEFT" prefHeight="54.0" prefWidth="800.0" style="-fx-background-color: #f5f5f5;">
-         <Button fx:id="backbtn" layoutX="20.0" layoutY="15.0" mnemonicParsing="false" onMouseClicked="#RedirectToHome" onMousePressed="#BPE" onMouseReleased="#BRE">
+         <Button fx:id="backbtn" layoutX="20.0" layoutY="15.0" mnemonicParsing="false" onMouseClicked="#RedirectToHome" onMousePressed="#BPE" onMouseReleased="#BRE" prefHeight="56.0" prefWidth="41.0">
             <graphic>
-               <ImageView fitHeight="37.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+               <ImageView fitHeight="45.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                   <Image url="@../images/back.png" />
                </ImageView>
             </graphic>
@@ -24,18 +32,15 @@
                <Cursor fx:constant="HAND" />
             </cursor>
          </Button>
-         <Button fx:id="play_pause" onMouseClicked="#PauseTimerEvent" onMousePressed="#PPE" onMouseReleased="#PRE">
+         <Button fx:id="play_pause" onMouseClicked="#PauseTimerEvent" onMousePressed="#PPE" onMouseReleased="#PRE" prefHeight="60.0" prefWidth="54.0">
             <graphic>
-               <ImageView fitHeight="106.0" fitWidth="29.0" pickOnBounds="true" preserveRatio="true">
+               <ImageView fx:id="play_pause_img" fitHeight="47.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
                   <Image url="@../images/pause.png" />
                </ImageView>
             </graphic>
             <HBox.margin>
-               <Insets left="10.0" />
+               <Insets left="600.0" />
             </HBox.margin>
-            <padding>
-               <Insets left="640.0" />
-            </padding>
             <cursor>
                <Cursor fx:constant="HAND" />
             </cursor>
@@ -46,12 +51,12 @@
                   <Image url="@../images/question.png" />
                </ImageView>
             </graphic>
-            <padding>
-               <Insets left="30.0" />
-            </padding>
             <cursor>
                <Cursor fx:constant="HAND" />
             </cursor>
+            <HBox.margin>
+               <Insets left="40.0" />
+            </HBox.margin>
          </Button>
       </HBox>
       <Separator prefWidth="800.0" />
