Added new functions. Highlighting Area,Duplicate,identical. Disable used buttons. Undo.

--- a/src/CSS/Game.css
+++ b/src/CSS/Game.css
@@ -14,3 +14,9 @@
     -fx-background-radius: 15;
     -fx-border-width:0 ;
 }
+
+#Timer_min{-fx-background-color: transparent;-fx-text-fill: #afc0c8}
+
+#Timer_sec{-fx-background-color: transparent;-fx-text-fill: #afc0c8}
+
+#Score{-fx-background-color: transparent;-fx-text-fill: #afc0c8}
