--- a/src/Resources/Game.fxml
+++ b/src/Resources/Game.fxml
@@ -1,87 +1,79 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.control.ToggleButton?>
-<?import javafx.scene.control.ToggleGroup?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<Pane cache="true" cacheHint="QUALITY" depthTest="ENABLE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" stylesheets="@../CSS/Game.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.GameController">
-   <VBox fx:id="vb" alignment="TOP_CENTER" disable="true" prefHeight="800.0" prefWidth="800.0">
-      <HBox alignment="CENTER_LEFT" prefHeight="54.0" prefWidth="800.0" style="-fx-background-color: #f5f5f5;">
-         <Button fx:id="backbtn" layoutX="20.0" layoutY="15.0" mnemonicParsing="false" onMouseClicked="#RedirectToHome" onMousePressed="#BPE" onMouseReleased="#BRE" prefHeight="56.0" prefWidth="41.0">
-            <graphic>
-               <ImageView fitHeight="45.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
-                  <Image url="@../images/back.png" />
-               </ImageView>
-            </graphic>
-            <HBox.margin>
-               <Insets left="10.0" />
-            </HBox.margin>
-            <cursor>
-               <Cursor fx:constant="HAND" />
-            </cursor>
-         </Button>
-         <Button fx:id="play_pause" onMouseClicked="#PauseTimerEvent" onMousePressed="#PPE" onMouseReleased="#PRE" prefHeight="60.0" prefWidth="54.0">
-            <graphic>
-               <ImageView fx:id="play_pause_img" fitHeight="47.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
-                  <Image url="@../images/pause.png" />
-               </ImageView>
-            </graphic>
-            <HBox.margin>
-               <Insets left="600.0" />
-            </HBox.margin>
-            <cursor>
-               <Cursor fx:constant="HAND" />
-            </cursor>
-         </Button>
-         <Button fx:id="howTobtn" layoutX="20.0" layoutY="15.0" mnemonicParsing="false" onMouseClicked="#RedirectToHTP" onMousePressed="#HTPE" onMouseReleased="#HTRE">
-            <graphic>
-               <ImageView fitHeight="50.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
-                  <Image url="@../images/question.png" />
-               </ImageView>
-            </graphic>
-            <cursor>
-               <Cursor fx:constant="HAND" />
-            </cursor>
-            <HBox.margin>
-               <Insets left="40.0" />
-            </HBox.margin>
-         </Button>
-      </HBox>
+<Pane cache="true" cacheHint="QUALITY" depthTest="ENABLE" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" stylesheets="@../CSS/Game.css" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.GameController">
+   <HBox fx:id="vb1" alignment="CENTER_LEFT" disable="true" prefHeight="62.0" prefWidth="800.0" style="-fx-background-color: #f5f5f5;">
+      <Button fx:id="backbtn" layoutX="20.0" layoutY="15.0" mnemonicParsing="false" onMouseClicked="#RedirectToHome" onMousePressed="#BPE" onMouseReleased="#BRE" prefHeight="56.0" prefWidth="41.0">
+         <graphic>
+            <ImageView fitHeight="45.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+               <Image url="@../images/back.png" />
+            </ImageView>
+         </graphic>
+         <HBox.margin>
+            <Insets left="10.0" />
+         </HBox.margin>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="play_pause" onMouseClicked="#PauseTimerEvent" onMousePressed="#PPE" onMouseReleased="#PRE" prefHeight="60.0" prefWidth="54.0">
+         <graphic>
+            <ImageView fx:id="play_pause_img" fitHeight="47.0" fitWidth="35.0" pickOnBounds="true" preserveRatio="true">
+               <Image url="@../images/pause.png" />
+            </ImageView>
+         </graphic>
+         <HBox.margin>
+            <Insets left="600.0" />
+         </HBox.margin>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button fx:id="howTobtn" layoutX="20.0" layoutY="15.0" mnemonicParsing="false" onMouseClicked="#RedirectToHTP" onMousePressed="#HTPE" onMouseReleased="#HTRE">
+         <graphic>
+            <ImageView fitHeight="50.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true">
+               <Image url="@../images/question.png" />
+            </ImageView>
+         </graphic>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+         <HBox.margin>
+            <Insets left="40.0" />
+         </HBox.margin>
+      </Button>
+   </HBox>
+   <VBox fx:id="vb" alignment="BOTTOM_CENTER" disable="true" layoutY="60.0" prefHeight="740.0" prefWidth="800.0">
       <Separator prefWidth="800.0" />
       <HBox fx:id="TimerBox" alignment="CENTER" prefHeight="53.0" prefWidth="800.0" style="-fx-background-color: #f5f5f5;">
          <VBox.margin>
             <Insets />
          </VBox.margin>
-         <HBox alignment="CENTER" prefHeight="54.0" prefWidth="112.0">
+         <HBox alignment="CENTER" prefHeight="54.0" prefWidth="137.0">
             <ImageView fitHeight="64.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
                <Image url="@../images/clock.png" />
             </ImageView>
-            <Label fx:id="Timer_min" text="00" textFill="#afc0c8">
+            <Label fx:id="Timer_min" alignment="CENTER" minWidth="35.0" prefHeight="30.0" prefWidth="35.0" text="00">
                <font>
                   <Font name="Segoe UI Black" size="20.0" />
                </font>
+               <HBox.margin>
+                  <Insets left="5.0" />
+               </HBox.margin>
             </Label>
             <Label text=":" textFill="#afc0c8">
                <font>
                   <Font name="Segoe UI Black" size="20.0" />
                </font>
             </Label>
-            <Label fx:id="Timer_sec" text="00" textFill="#afc0c8">
+            <Label fx:id="Timer_sec" alignment="CENTER" minWidth="35.0" prefHeight="30.0" prefWidth="35.0" text="00">
                <font>
                   <Font name="Segoe UI Black" size="20.0" />
                </font>
@@ -93,7 +85,7 @@
             </HBox.margin>
             <Image url="@../images/dollar.png" />
          </ImageView>
-         <Label fx:id="Score" text="0" textFill="#afc0c8">
+         <Label fx:id="Score" prefHeight="30.0" prefWidth="62.0" text="0">
             <font>
                <Font name="Segoe UI Black" size="20.0" />
             </font>
@@ -1077,10 +1069,13 @@
          </ToggleButton>
       </HBox>
    </VBox>
-   <Button fx:id="start" layoutX="158.0" layoutY="358.0" mnemonicParsing="false" onMouseClicked="#start" prefHeight="122.0" prefWidth="485.0" style="-fx-background-color: #247dfb; -fx-background-radius: 15;" text="START" textFill="WHITE">
+   <Button fx:id="start" layoutX="158.0" layoutY="352.0" mnemonicParsing="false" onMouseClicked="#start" prefHeight="122.0" prefWidth="485.0" style="-fx-background-color: #247dfb; -fx-background-radius: 15;" text="START" textFill="WHITE">
       <font>
          <Font name="Segoe UI Black" size="57.0" />
       </font>
+      <effect>
+         <DropShadow color="#1e63cc" height="19.0" offsetY="10.0" width="23.0" />
+      </effect>
    </Button>
    <ToggleButton fx:id="easy" layoutX="191.0" layoutY="496.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" style="-fx-background-color: #00e8f2; -fx-background-radius: 15;" text="EASY" textFill="WHITE">
       <font>
@@ -1109,5 +1104,7 @@
          <DropShadow color="#03b3cb" height="16.08" offsetY="7.0" radius="7.577500000000001" spread="0.08" width="16.23" />
       </effect>
    </ToggleButton>
-   <Button mnemonicParsing="false" />
+   <ImageView fx:id="GameOver" fitHeight="549.0" fitWidth="800.0" layoutX="118.0" layoutY="118.0" preserveRatio="true" visible="false">
+      <Image url="@../images/GameOver.png" />
+   </ImageView>
 </Pane>
