--- a/src/Resources/HighScores.fxml
+++ b/src/Resources/HighScores.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -21,10 +22,10 @@
         <Image url="@../images/BG.jpg" />
     </ImageView>
     <VBox alignment="TOP_CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="553.0" prefWidth="395.0">
-        <HBox prefHeight="45.0" prefWidth="395.0">
-            <Button fx:id="backbtn" minHeight="0.0" minWidth="38.0" mnemonicParsing="false" onMouseClicked="#RedirectToHome" onMousePressed="#BackPE" onMouseReleased="#BackRE" prefHeight="34.0" prefWidth="38.0">
+        <HBox prefHeight="38.0" prefWidth="395.0">
+            <Button fx:id="backbtn" minHeight="0.0" minWidth="35.0" mnemonicParsing="false" onMouseClicked="#RedirectToHome" onMousePressed="#BackPE" onMouseReleased="#BackRE" prefHeight="36.0" prefWidth="35.0">
                 <graphic>
-                    <ImageView fx:id="backicon" blendMode="SRC_ATOP" fitHeight="28.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                    <ImageView fx:id="backicon" blendMode="SRC_ATOP" fitHeight="31.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                         <Image url="@../images/back.png" />
                     </ImageView>
                 </graphic>
@@ -77,7 +78,35 @@
          <VBox.margin>
             <Insets top="10.0" />
          </VBox.margin></Separator>
-       <GridPane alignment="CENTER" prefHeight="356.0" prefWidth="395.0">
+        <GridPane>
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="165.5999755859375" minWidth="10.0" prefWidth="10.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="165.5999755859375" minWidth="10.0" prefWidth="10.0"/>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="165.5999755859375" minWidth="10.0" prefWidth="10.0"/>
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
+            <TextField alignment="CENTER" maxHeight="37.0" maxWidth="170.0" prefHeight="0.0" prefWidth="170.0"
+                       text="NAME">
+               <font>
+                   <Font name="Segoe UI Black" size="16.0"/>
+               </font>
+            </TextField>
+            <TextField alignment="CENTER" maxHeight="37.0" maxWidth="170.0" prefHeight="0.0" prefWidth="152.0"
+                       text="SCORE" GridPane.columnIndex="1">
+               <font>
+                   <Font name="Segoe UI Black" size="16.0"/>
+               </font>
+            </TextField>
+            <TextField alignment="CENTER" maxHeight="37.0" maxWidth="170.0" prefHeight="0.0" prefWidth="132.0"
+                       text="TIME" GridPane.columnIndex="2">
+               <font>
+                   <Font name="Segoe UI Black" size="16.0"/>
+               </font>
+            </TextField>
+        </GridPane>
+       <GridPane fx:id="grid" alignment="CENTER" prefHeight="310.0" prefWidth="395.0">
           <columnConstraints>
              <ColumnConstraints hgrow="SOMETIMES" maxWidth="165.5999755859375" minWidth="10.0" prefWidth="10.0" />
              <ColumnConstraints hgrow="SOMETIMES" maxWidth="149.3999435424805" minWidth="10.0" prefWidth="10.0" />
@@ -93,158 +122,7 @@
              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           </rowConstraints>
-          <Label alignment="CENTER" prefHeight="37.0" prefWidth="170.0" text="NAME" textAlignment="CENTER">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="9.0" layoutY="10.0" prefHeight="37.0" prefWidth="152.0" text="SCORE" textAlignment="CENTER" GridPane.columnIndex="1">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="307.0" layoutY="10.0" prefHeight="38.0" prefWidth="132.0" text="TIME" textAlignment="CENTER" GridPane.columnIndex="2">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="10.0" layoutY="10.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.rowIndex="1">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="10.0" layoutY="46.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.rowIndex="2">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="10.0" layoutY="46.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.rowIndex="3">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="10.0" layoutY="83.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.rowIndex="4">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="10.0" layoutY="83.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.rowIndex="5">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="10.0" layoutY="83.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.rowIndex="6">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="10.0" layoutY="83.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.rowIndex="7">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="10.0" layoutY="83.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.rowIndex="8">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="10.0" layoutY="330.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.rowIndex="9">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="143.0" layoutY="118.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="1">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="143.0" layoutY="46.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="2">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="10.0" layoutY="295.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="3">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="10.0" layoutY="260.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="4">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="10.0" layoutY="224.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="5">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="10.0" layoutY="188.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="6">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="10.0" layoutY="330.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="7">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="10.0" layoutY="153.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="8">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="10.0" layoutY="118.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="9">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="143.0" layoutY="46.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="1">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="143.0" layoutY="83.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="2">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="143.0" layoutY="118.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="3">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="143.0" layoutY="153.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="4">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="143.0" layoutY="188.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="5">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="143.0" layoutY="224.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="6">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="143.0" layoutY="260.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="7">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="143.0" layoutY="295.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="8">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
-          <Label alignment="CENTER" layoutX="143.0" layoutY="330.0" prefHeight="37.0" prefWidth="170.0" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="9">
-             <font>
-                <Font name="Segoe UI Black" size="16.0" />
-             </font>
-          </Label>
        </GridPane>
     </VBox>
    <stylesheets>
