Fixed Highlight Errors Expanded Undo Functionality

--- a/src/CSS/Game.css
+++ b/src/CSS/Game.css
@@ -10,9 +10,7 @@
 .text-field{
     -fx-text-fill: white;
     -fx-background-color:#e3e3e3 ;
-    -fx-border-color:white ;
     -fx-background-radius: 15;
-    -fx-border-width:0 ;
 }
 
 #Timer_min{-fx-background-color: transparent;-fx-text-fill: #afc0c8}
@@ -20,3 +18,8 @@
 #Timer_sec{-fx-background-color: transparent;-fx-text-fill: #afc0c8}
 
 #Score{-fx-background-color: transparent;-fx-text-fill: #afc0c8}
+
+#name{-fx-text-fill:  #8452ff;
+    -fx-background-color:#e3e3e3 ;
+    -fx-background-radius: 15;}
+#name:hover{-fx-opacity: 1}
