--- a/src/Resources/Main.fxml
+++ b/src/Resources/Main.fxml
@@ -60,7 +60,7 @@
                <Insets />
             </opaqueInsets>
          </Button>
-         <Button fx:id="htpbtn" layoutX="64.0" layoutY="110.0" mnemonicParsing="false" onMouseClicked="#RedirectToSettings" onMousePressed="#OPE" onMouseReleased="#ORE" prefHeight="61.0" prefWidth="234.0" text="OPTIONS" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+         <Button fx:id="opbtn" layoutX="64.0" layoutY="110.0" mnemonicParsing="false" onMouseClicked="#RedirectToSettings" onMousePressed="#OPE" onMouseReleased="#ORE" prefHeight="61.0" prefWidth="234.0" text="OPTIONS" textFill="WHITE" GridPane.halignment="CENTER" GridPane.rowIndex="2">
             <font>
                <Font name="Segoe UI Black" size="22.0" />
             </font>
